# controllers/users.js
@@ -1,8 +1,18 @@
 const mongodb = require("../db/connect");
+const express = require("express");
+const app = express();
 const ObjectId = require("mongodb").ObjectId;
+// const MongoClient = require('mongodb').MongoClient;
+// const client = new MongoClient(process.env.MONGODB_URI);
+//const { auth, requiresAuth } = require('express-openid-connect');
+//const client = new MongoClient(mongodb);
 
-//get all users from database
-const getAll = async (req, res) => {
+//app.get('/profile', requiresAuth(), (req, res) => {
+//  res.send(JSON.stringify(req.oidc.user));
+//});
+
+
+const getAllUsers = async (req, res) => {
   const result = await mongodb
     .getDb()
     .db("trainingdocs")
@@ -14,7 +24,7 @@ const getAll = async (req, res) => {
   });
 };
 //get one user from database
-const getSingle = async (req, res) => {
+const getSingleUser = async (req, res) => {
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
@@ -91,9 +101,177 @@ const deleteUser = async (req, res) => {
 };
 
 module.exports = {
-  getAll,
-  getSingle,
+  getAllUsers,
+  getSingleUser,
   createUser,
   updateUser,
   deleteUser,
 };
+
+/* function login(email, password, callback) {
+  const bcrypt = require('bcrypt');
+  const MongoClient = require('mongodb@3.1.4').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+
+    users.findOne({ email: email }, function (err, user) {
+      if (err || !user) {
+        client.close();
+        return callback(err || new WrongUsernameOrPasswordError(email));
+      }
+
+      bcrypt.compare(password, user.password, function (err, isValid) {
+        client.close();
+
+        if (err || !isValid) return callback(err || new WrongUsernameOrPasswordError(email));
+
+        return callback(null, {
+            user_id: user._id.toString(),
+            nickname: user.nickname,
+            email: user.email
+          });
+      });
+    });
+  });
+}
+function createUser(user, callback) {
+  const bcrypt = require('bcrypt');
+  const MongoClient = require('mongodb').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+
+    users.findOne({ email: user.email }, function (err, withSameMail) {
+      if (err || withSameMail) {
+        client.close();
+        return callback(err || new Error('the user already exists'));
+      }
+
+      bcrypt.hash(user.password, 10, function (err, hash) {
+        if (err) {
+          client.close();
+          return callback(err);
+        }
+
+        user.password = hash;
+        user.email_verified = false;
+        users.insert(user, function (err, inserted) {
+          client.close();
+
+          if (err) return callback(err);
+          callback(null);
+        });
+      });
+    });
+  });
+}
+function verifyUser (email, callback) {
+  const MongoClient = require('mongodb@3.1.4').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+    const query = { email: email, email_verified: false };
+
+    users.update(query, { $set: { email_verified: true } }, function (err, result) {
+      client.close();
+
+      if (err) return callback(err);
+      callback(null, result.result.n > 0);
+    });
+  });
+}
+function changePassword(email, newPassword, callback) {
+  const bcrypt = require('bcrypt');
+  const MongoClient = require('mongodb@3.1.4').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+
+    bcrypt.hash(newPassword, 10, function (err, hash) {
+      if (err) {
+        client.close();
+        return callback(err);
+      }
+
+      users.update({ email: email }, { $set: { password: hash } }, function (err, result) {
+        client.close();
+        if (err) return callback(err);
+        callback(null, result.result.n > 0);
+      });
+    });
+  });
+}
+function getByEmail(email, callback) {
+  const MongoClient = require('mongodb@3.1.4').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+
+    users.findOne({ email: email }, function (err, user) {
+      client.close();
+
+      if (err) return callback(err);
+      if (!user) return callback(null, null);
+
+      return callback(null, {
+        user_id: user._id.toString(),
+        nickname: user.nickname,
+        email: user.email
+      });
+    });
+  });
+}
+
+function removeUser(id, callback) {
+  const MongoClient = require('mongodb@3.1.4').MongoClient;
+  const client = new MongoClient(process.env.MONGODB_URI);
+
+  client.connect(function (err) {
+    if (err) return callback(err);
+
+    const db = client.db('trainingdocs');
+    const users = db.collection('users');
+
+    users.remove({ email: id }, function (err) {
+      client.close();
+
+      if (err) return callback(err);
+      callback(null);
+    });
+  });
+
+}
+module.exports = {
+  login,
+  createUser,
+  verifyUser,
+  changePassword,
+  getByEmail,
+  removeUser,
+  getAllUsers
+}; */
+
+//get all users from database
+
+
