# routes/paneldocs.js
@@ -1,11 +1,11 @@
 const express = require("express");
 const router = express.Router();
-const swaggerDocument = require("../swagger-output.json");
-const swaggerUi = require("swagger-ui-express");
+// const swaggerDocument = require("../swagger-output.json");
+// const swaggerUi = require("swagger-ui-express");
 
-router
-  .use("/api-docs", swaggerUi.serve)
-  .get("/api-docs", swaggerUi.setup(swaggerDocument));
+// router
+//   .use("/api-docs", swaggerUi.serve)
+//   .get("/api-docs", swaggerUi.setup(swaggerDocument));
 
 const docsController = require("../controllers/paneldocs");
 
