# server.js
@@ -9,7 +9,7 @@ const cors = require("cors");
 const dotenv = require("dotenv");
 dotenv.config();
 
-const { auth, requiresAuth } = require('express-openid-connect');
+const { auth, requiresAuth } = require("express-openid-connect");
 
 app
   .use(bodyParser.json())
@@ -35,27 +35,49 @@ app
   .use(cors())
   .use("/", require("./routes"));
 
+
 const config = {
   authRequired: false,
   auth0Logout: true,
   secret: process.env.SECRET,
   baseURL: process.env.BASE_URL,
   clientID: process.env.CLIENT_ID,
-  issuerBaseURL: process.env.ISSUER_BASE_URL
+  issuerBaseURL: process.env.ISSUER_BASE_URL,
 };
 
 // auth router attaches /login, /logout, and /callback routes to the baseURL
-app.use(auth(config));
+app.use("/", auth(config));
 
 // req.isAuthenticated is provided from the auth router
-app.get('/', (req, res) => {
-  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+app.get("/", (req, res) => {
+  res.send(req.oidc.isAuthenticated() ? "Logged in" : "Logged out");
 });
 
-app.get('/profile', requiresAuth(), (req, res) => {
+app.get("/profile", requiresAuth(), (req, res) => {
   res.send(JSON.stringify(req.oidc.user));
 });
 
+
+// app.get('/paneldocs', requiresAuth(), (req, res) => {
+//   console.log(req)
+//   Contact.find()
+//   .then(contacts => {
+//     res.status(200).json(contacts)
+//   }).catch(err => {
+//     res.status(500).json({ message: 'An error occured', error: err })
+//   })
+// })
+
+
+// app.get('/users', requiresAuth(), (req, res) => {
+//   console.log(req)
+//   Contact.find()
+//   .then(contacts => {
+//     res.status(200).json(contacts)
+//   }).catch(err => {
+//     res.status(500).json({ message: 'An error occured', error: err })
+//   })
+// })
 
 process.on("uncaughtException", (err, origin) => {
   console.log(
@@ -63,6 +85,7 @@ process.on("uncaughtException", (err, origin) => {
     `Caught exception: ${err}\n` + `Exception origin: ${origin}`,
   );
 });
+
 
 mongodb.initDb((err) => {
   if (err) {
@@ -73,3 +96,4 @@ mongodb.initDb((err) => {
     console.log(`Connected to DB. Web Server is listening on port ${port}`);
   }
 });
+
